refs #2465 Insight is starting to be cool
 * highlight links on hover, displaying a border and the absolute number of clicks. also, the bubble (along with all other bubbles for links to the same url) is highlighted and the url is shown in the status (lower right corner)
 * bubbles are updated when links are hidden or added. this is useful for drop-down navigations or ajax content.
 * code formatter applied (some whitespace changes)

git-svn-id: http://dev.piwik.org/svn/trunk@7228 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/plugins/Insight/client/insight.css
+++ b/plugins/Insight/client/insight.css
@@ -4,7 +4,13 @@
  */
 
 #PIS_StatusBar,
-.PIS_LinkTag {
+#PIS_StatusBar .PIS_Item,
+#PIS_StatusBar .PIS_Loading,
+.PIS_LinkTag,
+.PIS_LinkHighlightBoxTop,
+.PIS_LinkHighlightBoxRight,
+.PIS_LinkHighlightBoxLeft,
+.PIS_LinkHighlightBoxText {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -51,6 +57,14 @@
 	margin-left: 1px;
 }
 
+.PIS_LinkTag.PIS_Highlighted {
+	z-index: 10002;
+}
+
+.PIS_LinkTag.PIS_Highlighted span {
+	color: #E87500;
+}
+
 .PIS_LinkTag.PIS_Right {
 	background-position: -36px -21px;
 }
@@ -71,6 +85,32 @@
 
 .PIS_LinkTag.PIS_BottomRight {
 	background-position: -36px 0;
+}
+
+
+
+/**
+ * Link Highlights
+ */
+
+.PIS_LinkHighlightBoxTop,
+.PIS_LinkHighlightBoxRight,
+.PIS_LinkHighlightBoxText,
+.PIS_LinkHighlightBoxLeft {
+	position: absolute;
+	z-index: 10001;
+	overflow: hidden;
+	width: 2px;
+	height: 2px;
+	background: #E87500; 
+}
+
+.PIS_LinkHighlightBoxText {
+	line-height: 20px;
+	height: 20px;
+	font-size: 11px;
+	color: white;
+	width: auto;
 }
 
 
@@ -107,8 +147,13 @@
 
 #PIS_StatusBar .PIS_Item {
 	text-align: right;
-	padding: 3px 30px 0 0;
+	padding: 3px 5px 0 0;
 	margin: 0 15px 0 20px;
-	background: url(./loading.gif) no-repeat right center;
+	
 	font-weight: bold;
+}
+
+#PIS_StatusBar .PIS_Loading {
+	background: url(./loading.gif) no-repeat right center;
+	padding-right: 30px;
 }
