Refs #3080, added trusted host admin UI, display warning in login, normal & admin screens if hostname is not trusted, and make sure password reset is not possible if hostname is not trusted.
git-svn-id: http://dev.piwik.org/svn/trunk@7279 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/plugins/CoreAdminHome/templates/styles.css
+++ b/plugins/CoreAdminHome/templates/styles.css
@@ -143,3 +143,22 @@ table.admin  tbody td:hover, table.admin  tbody th:hover {
 .admin .sites_autocomplete a {
 	color: #255792;
 }
+
+/* trusted host styles */
+#trustedHostSettings .adminTable {
+	width:300px;
+}
+#trustedHostSettings .adminTable td {
+	vertical-align: middle;
+	padding-bottom: 0;
+}
+#trustedHostSettings .adminTable tr td:last-child {
+	padding: 0 0 0 0;
+}
+#trustedHostSettings input {
+	width:95%;
+}
+#trustedHostSettings .add-trusted-host-container {
+	padding: 12px 24px;
+}
+
