Fixes #3080, add config option to disable trusted_hosts check, tweak many translations, modify UI to display one input w/ a label if only one trusted host is set (or if there's an injected host), set trusted host to Host if no stored trusted hosts and user is superuser, and don't use regex to check host.
git-svn-id: http://dev.piwik.org/svn/trunk@7280 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/plugins/CoreAdminHome/templates/styles.css
+++ b/plugins/CoreAdminHome/templates/styles.css
@@ -156,7 +156,7 @@ table.admin  tbody td:hover, table.admin  tbody th:hover {
 	padding: 0 0 0 0;
 }
 #trustedHostSettings input {
-	width:95%;
+	width:238px;
 }
 #trustedHostSettings .add-trusted-host-container {
 	padding: 12px 24px;
