fixes #3487, refs #3359 refactoring ajax requests to use a global method to query for module actions
git-svn-id: http://dev.piwik.org/svn/trunk@7322 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/plugins/CoreHome/templates/styles.css
+++ b/plugins/CoreHome/templates/styles.css
@@ -210,4 +210,9 @@ a.Piwik_Popover_Error_Back {
 	margin: 20px 0 0 0;
 	color: #1D3256;
 	font-size: 14px;
-} 
+}
+
+#alert.ui-confirm input {
+    display: block;
+    margin: 10px auto 5px!important;
+}
