fixes #3379 added possibility to allow super user to copy the current dashboard to another user
git-svn-id: http://dev.piwik.org/svn/trunk@7357 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/plugins/Dashboard/templates/dashboard.css
+++ b/plugins/Dashboard/templates/dashboard.css
@@ -426,7 +426,7 @@ div.widgetpreview-preview {
 }
 
 #newDashboardNameInput, #createDashboardNameInput {
-     margin: 20px 0 0 100px;
+    margin: 20px 0 0 100px;
     text-align: left;
 }
 
@@ -437,4 +437,20 @@ div.widgetpreview-preview {
 .popoverSubMessage {
     text-align: center;
     padding: 10px 0 5px 0;
+}
+
+#copyDashboardToUserConfirm .inputs {
+    width: 375px;
+    margin: 10px auto 0;
+}
+
+#copyDashboardToUserConfirm .inputs select,
+#copyDashboardToUserConfirm .inputs input {
+    width: 150px;
+    float: left;
+}
+
+#copyDashboardToUserConfirm .inputs label {
+    width: 200px;
+    float: left;
 }
