--- a/plugins/Overlay/templates/index.css
+++ b/plugins/Overlay/templates/index.css
@@ -1,60 +1,38 @@
 
-#Overlay_Container {
-	margin-top: 9px;
-	height: 300px;
-	position: relative;
+body #header {
+	margin-left: -12px;
 }
 
-#Overlay_Container.Overlay_FullScreen {
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	top: 0;
-	left: 0;
-	background: white;
-	z-index: 100000;
-	margin: 0;
-	padding: 0;
+body #logo {
+	margin-top: 5px;
+}
+
+body h1 {
+	font-size: 15px;
+	font-weight: normal;
+	margin: -3px 0 0 0;
+	padding: 0 0 0 5px;
 }
 
 #Overlay_Location {
-	color: #7E7363;
-	padding-left: 220px;
-	padding-bottom: 7px;
+	width: 200px;
+	padding: 30px 0;
+	margin-left: 5px;
 	font-size: 12px;
-	cursor: default;
-}
-
-#Overlay_Container.Overlay_FullScreen #Overlay_Location {
-	float: left;
-	width: 180px;
-	position: relative;
-	margin: 15px 0 30px 20px;
-	font-size: 11px;
-	padding: 0;
 }
 
 #Overlay_Loading {
 	background: url(../../../themes/default/images/loading-blue.gif) no-repeat center 10px;
-	float: left;
 	width: 190px;
-	position: relative;
-	clear: left;
-	padding-top: 35px;
+	padding-top: 30px;
+	margin-top: 30px;
 	text-align: center;
 	display: none;
 }
 
 #Overlay_Sidebar {
-	float: left;
 	width: 200px;
-	position: relative;
-	clear: left;
-}
-
-#Overlay_Container.Overlay_FullScreen #Overlay_Sidebar {
-	width: 180px;
-	margin-left: 20px;
+	margin-left: 5px;
 }
 
 #Overlay_Sidebar h2 {
@@ -64,55 +42,29 @@
 	color: #255792;
 }
 
-#Overlay_Sidebar a.Overlay_FullScreen,
-#Overlay_Sidebar a.Overlay_NewTab {
+a#Overlay_FullScreen {
 	display: block;
 	color: #255792;
 	font-size: 13px;
 	line-height: 15px;
-	margin-top: 20px;
+	margin: 20px 0 0 5px;
 	padding: 8px 0 3px 22px;
 	background: url(../../../themes/default/images/fullscreen.png) no-repeat 0 8px;
 	text-decoration: none;
 }
 
-#Overlay_Sidebar a.Overlay_NewTab {
-	margin-top: 0;
-	background: url(../../../themes/default/images/newtab.png) no-repeat 0 7px;
-}
-
-#Overlay_Sidebar a.Overlay_FullScreen:hover,
-#Overlay_Sidebar a.Overlay_NewTab:hover {
+a#Overlay_FullScreen:hover {
 	color: #E87500;
-}
-
-#Overlay_Sidebar span.Overlay_CloseFullScreen {
-	display: none;
-}
-
-#Overlay_Container.Overlay_FullScreen #Overlay_Sidebar span.Overlay_OpenFullScreen {
-	display: none;
-}
-
-#Overlay_Container.Overlay_FullScreen #Overlay_Sidebar span.Overlay_CloseFullScreen {
-	display: inline;
 }
 
 #Overlay_Main {
 	margin-left: 220px;
-	position: relative;
+	position: absolute;
+	top: 0;
 }
 
 #Overlay_Iframe {
-	width: 100%;
-	height: 100%;
-	border: 2px solid #ddd;
-}
-
-#Overlay_Container.Overlay_FullScreen #Overlay_Iframe {
-	border-top: 0;
-	border-right: 0;
-	border-bottom: 0;
+	border-left: 2px solid #ddd;
 }
 
 .Overlay_Metric {
@@ -144,11 +96,10 @@ body .piwik-tooltip.Overlay_Tooltip {
 }
 
 #Overlay_Error_NotLoading {
-	float: left;
 	width: 190px;
-	position: relative;
-	clear: left;
 	display: none;
+	margin: 20px 0 0 5px;
+	font-size: 14px;
 }
 
 #Overlay_Error_NotLoading span {
