Fixes #3456, added updating scheduled task for GeoIP databases w/ manager UI and easy-install for GeoLiteCity.
Notes:
  * Added new PEAR lib Archive_Tar and new Unzip implmentations for .tar.gz, .tar.bz2 & .gz files.
  * Modified Http class to allow use of Range HTTP header.
  * Added ability to download file in chunks to Http class.
  * Moved GeoIP admin page styles to separate CSS file.
  * Allowed monthly scheduled tasks to specify day of week to run on.


git-svn-id: http://dev.piwik.org/svn/trunk@7550 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/themes/default/common.css
+++ b/themes/default/common.css
@@ -609,6 +609,7 @@ select {
 	background:#847b6d url(images/dashboard_h_bg_hover.png) repeat-x 0 0;
 	float:right; 
 	margin:12px 0 10px 0;
+	cursor:pointer;
 }
 /* on admin screen, Save button aligned on the left */
 .admin .submit {
