Refs #3456, various UX improvements to GeoIP updater/auto-downloader.
git-svn-id: http://dev.piwik.org/svn/trunk@7577 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/plugins/UserCountry/templates/styles.css
+++ b/plugins/UserCountry/templates/styles.css
@@ -19,8 +19,11 @@ span.is-broken {
 }
 
 #manage-geoip-dbs {
-	width:900px;
 	height: 20em;
+}
+
+#geoipdb-screen1, #geoipdb-screen2-download,#geoipdb-update-info {
+	width:900px;
 }
 
 #geoipdb-update-info tr input[type="text"],#geoipdb-screen2-update tr input[type="text"] {
