Refs #3290, make diffs more visible.
git-svn-id: http://dev.piwik.org/svn/trunk@7610 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/tests/lib/visualphpunit/app/public/css/bootstrap.css
+++ b/tests/lib/visualphpunit/app/public/css/bootstrap.css
@@ -5046,5 +5046,12 @@ label.checkbox {
   margin-right: 5px;
 }
 
-.test-diff {
+.test-diff ins {
+  background-color:chartreuse;
+  color:black;
+}
+
+.test-diff del {
+  background-color:firebrick;
+  color:white;
 }
