Fixes #1253, added annotations plugin that allows attaching notes to different days.
Notes:

  * Modified renderers so they would render arrays better. Before, arrays were added to DataTables and array keys were either lost or ignored, now they are rendered.
  * Fixed issue w/ JSON rendering that rendered arrays when the PHP arrays didn't have contiguous keys.
  * Augmented some exception messages.
  * Added utility method processRequest to Piwik_API_Request to ease use of the class.


git-svn-id: http://dev.piwik.org/svn/trunk@7612 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/plugins/CoreHome/templates/datatable.css
+++ b/plugins/CoreHome/templates/datatable.css
@@ -343,6 +343,11 @@ table thead div {
 	height: 0;
 }
 
+.dataTable .loadingPiwikBelow {
+	padding-bottom:5px;
+	display:block;
+	text-align:center;
+}
 
 .dataTableFooterIcons {
 	display:block; 
@@ -623,6 +628,7 @@ body .piwik-tooltip.rowActionTooltip {
     position: relative;
     margin-left: 5px;
     min-height: 20px;
+    z-index:1;
 }
 
 .limitSelection.hidden {
