fixes #3614 hide language selector form elements by default.
git-svn-id: http://dev.piwik.org/svn/trunk@7634 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/themes/default/styles.css
+++ b/themes/default/styles.css
@@ -7,6 +7,10 @@
     border: 1px solid #1F447F!important;
 }
 
+#languageSelection input, #languageSelection select {
+    display: none;
+}
+
 #languageSelection .ui-autocomplete-input {
     background:#FFF url('images/sortdesc.png') no-repeat right center!important;
     padding: 2px 18px 2px 4px;
