Fixes #2997, check for NFS filesystem during system check and if installing switch to database sessions.
git-svn-id: http://dev.piwik.org/svn/trunk@7681 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/plugins/Installation/templates/systemCheckPage.css
+++ b/plugins/Installation/templates/systemCheckPage.css
@@ -3,6 +3,10 @@
 	width:900px;
 }
 
+#systemCheckOptional {
+	margin-bottom:2em;
+}
+
 #systemCheckOptional td,#systemCheckRequired td {
 	/*border: 1px solid #222;*/
 	padding: 1em .5em 1em 2em;
