Fixes #728, add ability to force checking of updates for admin users & tweak about box text.
git-svn-id: http://dev.piwik.org/svn/trunk@7683 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/plugins/CoreHome/templates/styles.css
+++ b/plugins/CoreHome/templates/styles.css
@@ -216,3 +216,21 @@ a.Piwik_Popover_Error_Back {
     display: block;
     margin: 10px auto 5px!important;
 }
+
+#updateCheckLinkContainer {
+	float:right;
+	cursor:pointer;
+}
+
+#updateCheckLinkContainer>* {
+	vertical-align:bottom;
+}
+
+#header_message #checkForUpdates {
+	font-size:.8em;
+	line-height:16px;
+	display:inline-block;
+}
+#header_message #checkForUpdates:hover {
+	text-decoration:none;
+}
