Fixes #3175, allow about message to stick if clicked.
git-svn-id: http://dev.piwik.org/svn/trunk@7691 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/themes/default/common.css
+++ b/themes/default/common.css
@@ -189,9 +189,9 @@ a {
 #header_message .header_short{ display:block; white-space:nowrap;  }
 #header_message .header_full{ display:none; }
 #header_message:hover .header_short,
-#header_message:active .header_short { display:none; } 
+#header_message.active .header_short { display:none; } 
 #header_message:hover .header_full,
-#header_message:hover .header_full { display:block; }
+#header_message.active .header_full { display:block; }
 
 .header_full {
 	padding-bottom:5px;
