New admin menus, hooray!
New vertical admin menus are organized as follow:
- Predefined menus are Manage, Settings, Diagnostics, Plugins, Community
- New submenus can be defined via Piwik_AddAdminSubMenu()
- Piwik_AddAdminMenu defaults to "Settings"

fixed #1552


git-svn-id: http://dev.piwik.org/svn/trunk@7815 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/plugins/CoreAdminHome/templates/styles.css
+++ b/plugins/CoreAdminHome/templates/styles.css
@@ -6,9 +6,9 @@
 }
 
 #content.admin {
-	margin:0 15px;
+	margin:0 15px 0 270px;
 	padding:0 0 0 0;
-	font:13px Arial, Helvetica, sans-serif
+	font:13px Arial, Helvetica, sans-serif;
 }
 
 .admin #header_message{
