--- a/plugins/CoreAdminHome/templates/menu.css
+++ b/plugins/CoreAdminHome/templates/menu.css
@@ -1,43 +1,78 @@
 #menu{ 
-	padding:10px 0 0 0; 
-	margin-bottom:20px;
+	padding:0 0 0 0; 
+	float: left;
+	width: 240px;
+	position: absolute;
 }
+
 #tablist {
-	padding-bottom: 1px;
-	margin-left: 0;
+	background-image: linear-gradient(top, #FECB00 0%, #FE9800 25%, #FE6702 50%, #CA0000 75%, #670002 100%);
+	background-image: -o-linear-gradient(top, #FECB00 0%, #FE9800 25%, #FE6702 50%, #CA0000 75%, #670002 100%);
+	background-image: -moz-linear-gradient(top, #FECB00 0%, #FE9800 25%, #FE6702 50%, #CA0000 75%, #670002 100%);
+	background-image: -webkit-linear-gradient(top, #FECB00 0%, #FE9800 25%, #FE6702 50%, #CA0000 75%, #670002 100%);
+	background-image: -ms-linear-gradient(top, #FECB00 0%, #FE9800 25%, #FE6702 50%, #CA0000 75%, #670002 100%);
+
+	background-image: -webkit-gradient(
+		linear,
+		left top,
+		left bottom,
+		color-stop(0, #FECB00),
+		color-stop(0.25, #FE9800),
+		color-stop(0.5, #FE6702),
+		color-stop(0.75, #CA0000),
+		color-stop(1, #670002)
+	);
+
+	-moz-background-size:5px 100%;
+	background-size:5px 100%;
+	background-position:0 0, 100% 0;
+	background-repeat:no-repeat;
+}
+
+#tablist {
+	padding-left: 5px;
 	margin-bottom: 0;
 	margin-top: 0.1em;
-	border-bottom: 1px solid #808080;
+	border: 1px solid #ddd;
+	border-radius: 5px;
 }
 
 #tablist li {
 	list-style: none;
-	display: inline;
 	margin: 0;
-	padding-bottom:3px;
+}
+
+#tablist > li {
+	padding-bottom: 5px;
+}
+
+#tablist > li > span {
+	border-bottom: 1px dotted #778;
+	display: block;
+	padding: 5px 10px;
+	font-size: 18px;
 }
 
 #tablist li a {
 	text-decoration: none;
-	padding: 3px 0.5em;
-	margin-right: 3px;
-	border: 1px solid #778;
-	border-bottom: none;
+	padding: 0.6em 0.9em;
 	background: white;
-	font: bold 16px Georgia;
+	font: 14px Arial, Helvetica, sans-serif;
+	display: block;
 }
 
 #tablist li a:link,#tablist li a:visited {
 	color: #000;
-	border-radius: 4px 4px 0 0;
-	-moz-border-radius:4px 4px 0 0;
-	-webkit-border-radius:4px 4px 0 0;
 }
 
 #tablist li a:hover, #tablist li a.active {
-	color: #000;
-	background: #defdbb;
+	color: #e87500;
+	background: #f1f1f1;
 	border-color: #000;
+}
+
+#tablist li a:hover {
+	text-decoration: underline;
 }
 
 #tablist li a.current {
