Fixes #1899, add report that merges all Referrer reports and modified Referrer overview report to support subtables for each referrer type.
Notes:
- modified VisualPHPUnit so Incomplete errors that come from missing expected files have 'Use Processed' link option.
- fixed bug in VisualPHPUnit's 'Use Processed' link (a piwik-specific change).
- Added ability to prepend/append HTML to labels in HTML datatable output by using html_label_prefix/html_label_suffix.
- Fix bug in Piwik_DataTable_Array::mergeSubtables where keyName was not copied in new array.



git-svn-id: http://dev.piwik.org/svn/trunk@7830 59fd770c-687e-43c8-a1e3-f5a4ff64c105

--- a/tests/lib/visualphpunit/app/view/home/index.html
+++ b/tests/lib/visualphpunit/app/view/home/index.html
@@ -361,8 +361,8 @@
                   <em style="display:inline-block">Diff:</em>
                   <a href="#" class="use-processed-file-link" style="display:inline-block;margin-left:256px;" data-file="<%= test.processed_file %>">Use Processed</a>
                   <div class='test-diff'
-                       data-expected="<%= escapeQuotes(test.expected) %>"
-                       data-processed="<%= escapeQuotes(test.processed) %>">
+                       data-expected="<%= escapeQuotes(test.expected || '') %>"
+                       data-processed="<%= escapeQuotes(test.processed || '') %>">
                   </div>
                 </li>
                 <% } else if ( test.trace ) { %>
@@ -650,6 +650,7 @@
                     display_succeeded: $('#display-succeeded').is(':checked'),
                     totalElapsedTime: elapsed + 's',
                     escapeQuotes: function(s) {
+                      s = s || '';
                       return s.replace(/"/g, "&quot;");
                     }
                   }));
