Refs #3619  * Updating icons  * Tooltip more readable  * putting language in General and deprecating redundant translation

--- a/themes/default/common.css
+++ b/themes/default/common.css
@@ -772,3 +772,10 @@ table.entityTable tr td a {
 .section-toggler-link:hover {
 	text-decoration:underline;
 }
+
+.metricEvolution {
+    display:inline-block;
+    font-size:9pt;
+    opacity:0.75;
+}
+
