Security Check page doesn't look good on smaller screens (<1280px).
max-width is 900px, else 100%.

--- a/plugins/Installation/templates/systemCheckPage.css
+++ b/plugins/Installation/templates/systemCheckPage.css
@@ -1,6 +1,7 @@
 #systemCheckOptional,#systemCheckRequired {
 	border: 1px solid #dadada;
-	width:900px;
+	width:100%;
+	max-width: 900px;
 }
 
 #systemCheckOptional {
