Refs #3691, refactor Goals 'conversions by type of visit' template/logic into reusable View in CoreHome.
Notes:
  * Removed need for initial AJAX loading in new view.

--- a/themes/default/common.css
+++ b/themes/default/common.css
@@ -779,3 +779,11 @@ table.entityTable tr td a {
     opacity:0.75;
 }
 
+.reportsByDimensionView > .entityList {
+	float: left;
+	width: 220px; 
+	min-height:450px;
+}
+.dimensionCategory {
+	margin-top:10px;
+}
