--- a/themes/default/styles.css
+++ b/themes/default/styles.css
@@ -12,7 +12,7 @@
 }
 
 #languageSelection .ui-autocomplete-input {
-    background:#FFF url('images/sortdesc.png') no-repeat right center!important;
+    background:#FFF url(images/sortdesc.png) no-repeat right center!important;
     padding: 2px 18px 2px 4px;
     color:#255792!important;
     text-decoration: none;
