--- a/plugins/Dashboard/templates/dashboard.css
+++ b/plugins/Dashboard/templates/dashboard.css
@@ -152,7 +152,7 @@
     float: none;
 }
 
-.ui-dialog input[type=button], .ui-dialog button {
+.ui-dialog-buttonset input[type=button], .ui-dialog-buttonset button{
     background: #B5B0A7 url(../../../themes/default/images/dashboard_h_bg_hover.png) repeat-x 0 0 !important;
     color: #fff !important;
     border: 0 !important;
@@ -174,6 +174,11 @@
     opacity: 0.6;
     background: none #000;
     position: fixed;
+    z-index: 1000;
+}
+
+.ui-dialog {
+    z-index: 1001;
 }
 
 .menu {
